Thu Feb 26 15:04:43 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/Xt_Stopwatch/Client.h:
        * tests/Xt_Stopwatch/server.cpp:
          Updated includes (XtResource_Loader.h has been moved).

Thu Feb 26 14:26:25 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/PortableServer_include.pidl:
          Removed old comments

Thu Feb 26 12:23:25 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB.cpp:
          Updated layout of debug message

        * ace/TAO_Internal.cpp:
          Pass 0 as default logger key, makes it easier to check in ACE
          whether we have set an own key or noet

Thu Feb 26 12:08:25 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3597_Regression/Bug_3597_Regression.mpc:
        * tests/Bug_3597_Regression/run_test.pl:
        * tests/Bug_3597_Regression/server.cpp:
          Added a new regression test for bugzilla 3597, the
          -ORBServiceConfigLoggerKey is broken and doesn't work

Thu Feb 26 11:14:25 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * Bug_3553_Regression:
        * Bug_3553_Regression/Bug_3553_Regression_client.cpp:
        * Bug_3553_Regression/Bug_3553_Regression_server.cpp:
        * Bug_3553_Regression/Hello.cpp:
        * Bug_3553_Regression/Hello.h:
        * Bug_3553_Regression/run_test.pl:
        * Bug_3553_Regression/Test.idl:
        * Bug_3553_Regression/TransportCache.mpc:
        * bin/tao_orb_tests.lst:
          Added regression test for bug 3553. With this test
          you can test how many items the transport cache may
          hold and how the orb behaves when a maximum number
          of items is reached.

Thu Feb 26 08:40:48 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * orbsvcs/tests/InterfaceRepo/Application_Test/Makefile.am:

          Fixed link error in autoconf build.

Thu Feb 26 07:18:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3574_Regression/test.cpp: